syntax = "proto3";
option go_package = "meetup/gen";
option java_package = "meetup.gen";

service Hello {
    rpc sayHello(WelcomMessages) returns (ThankYouResponse);
}

message WelcomMessages {
    repeated WelcomMessage messages = 1;
}

message WelcomMessage {
    Person person = 1;
    string message = 2;
}

message Person{
    string first_name = 1;
    string last_name = 2;
    uint32 age = 3;
    Gender gender = 4;
}

enum Gender {
    MALE = 0;
    FEMALE = 1;
}

message ThankYouResponse {
    string message_response = 1;
}
